# Project-1-Motor-Vehicle-Collisions

./: Dockerfile  README.md  app_launcher.py  directory_structure.txt  docker-compose.yaml  docker_compose_cron.sh  extract_transform.ipynb  load_to_database.ipynb  main.py  pyproject.toml  requirements.txt
.dlt/: secrets.toml
sql/: transform_crashes.sql  transform_persons.sql  transform_vehicles.sql
src/extraction/: __init__.py  base_extractor.py  mvc_extractor.py
src/loading/: __init__.py  dlt_loader.py
src/transformation/: __init__.py  mvc_transformation.py
src/utils/: __init__.py  db_config.py
src/utils/secrets/: postgres.env
src/visualisation/: dashboard.ipynb  dashboard.py  visualistion_structure.txt
src/visualisation/data/: Borough Boundaries_20250615.geojson
src/visualisation/pages/: contributing_factor_analysis.py  geographic_analysis.py  time_based_analysis.py
