[project]
name = "mvc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "azure-core==1.34.0",
    "azure-storage-blob==12.25.1",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "cycler==0.12.1",
    "dash==3.0.4",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dlt==1.12.1",
    "dlt-pendulum==3.0.2",
    "executing==2.2.0",
    "fastcore==1.8.2",
    "fastjsonschema==2.21.1",
    "flask==3.0.3",
    "fonttools==4.58.2",
    "fqdn==1.5.1",
    "fsspec==2025.5.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "giturlparse==0.12.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "hexbytes==1.3.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.12.3",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-genutils==0.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==7.7.2",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.12.0",
    "jsonpath-ng==1.7.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==1.1.11",
    "kiwisolver==1.4.8",
    "makefun==1.15.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "narwhals==1.42.1",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "numpy==2.3.0",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==24.0",
    "pandas==2.3.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathvalidate==3.3.1",
    "pendulum==3.1.0",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "plotly==6.1.2",
    "pluggy==1.6.0",
    "ply==3.11",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "requirements-parser==0.13.0",
    "retrying==1.3.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rich-argparse==1.7.1",
    "rpds-py==0.25.1",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.40",
    "sqlglot==26.30.0",
    "stack-data==0.6.3",
    "stqdm==0.0.5",
    "streamlit==1.45.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250516",
    "types-setuptools==80.3.0.20250505",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.0.6",
    "widgetsnbextension==3.6.10",
    "zipp==3.23.0",
]
